plugins/kotlin/idea/tests/testData/multiplatform/duplicateActualsOneWithStrongIncompatibility/top/top.kt
package foo

expect fun <!LINE_MARKER("descr='Has actuals in [middle, bottom] module'")!>foo<!>(): Int
